# velnix-editor

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README_PROJECT.md  TRADEMARKS.md
.github/workflows/: build-deb.yml
VelnixEditor/: CMakeLists.txt  README.md
VelnixEditor/src/: test_gtk.cpp
VelnixEditor/src/app/: main.cpp
VelnixEditor/src/config/: ConfigPaths.cpp  ConfigPaths.h  ConfigSchema.cpp  ConfigSchema.h  ConfigStore.cpp  ConfigStore.h  CoreSettingsManager.cpp  CoreSettingsManager.h  RecentFilesManager.cpp  RecentFilesManager.h  SettingsManager.cpp  SettingsManager.h  ShortcutManager.cpp  ShortcutManager.h
VelnixEditor/src/core/: EditorTypes.cpp  EditorTypes.h  Logger.cpp  Logger.h  UpdateChecker.cpp  UpdateChecker.h
VelnixEditor/src/editor/: DocumentIO.cpp  DocumentIO.h  DocumentManager.cpp  DocumentManager.h  DocumentOperations.cpp  DocumentOperations.h  DocumentPrompt.cpp  DocumentPrompt.h  DocumentRefresh.cpp  DocumentRefresh.h  DocumentState.cpp  DocumentState.h  DocumentUI.cpp  DocumentUI.h  MacroManager.cpp  MacroManager.h  SaveNormalization.cpp  SaveNormalization.h  SearchManager.cpp  SearchManager.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h
VelnixEditor/src/test/: ConfigStoreTest.cpp  DocumentOperationsTest.cpp  DocumentStateTest.cpp  UpdateCheckerTest.cpp
VelnixEditor/src/ui/: EditorWindow.cpp  EditorWindow.h  EventHandler.cpp  EventHandler.h  Localization.cpp  Localization.h  WindowInitializer.cpp  WindowInitializer.h
docs/: ENCODING.md  INSTALL.md  KNOWN_ISSUES.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_0.1.0.md  RELEASE_NOTES_0.1.1.md  RELEASE_NOTES_0.1.2.md  RELEASE_NOTES_0.1.3.md  ROADMAP.md  TESTING.md  THIRD_PARTY_NOTICES.md  index.html
docs/assets/demo/: README.md
lexilla/: CMakeLists.txt
lexilla/src/: Lexilla.cxx  makefile
packaging/deb/: control.in  org.velnix.VelnixEditor.desktop
scintilla/: CMakeLists.txt
scintilla/gtk/: PlatGTK.cxx  makefile
scintilla/include/: Sci_Position.h
scripts/: build-deb.sh  generate-demo-assets.py
